--- a/mysite/personal/templates/personal/header.html
+++ b/mysite/personal/templates/personal/header.html
@@ -2,69 +2,175 @@
 <html lang="en">
 
 <head>
-	<title>Harrison Kinsley</title>
-	<meta charset="utf-8" />
+	<title>intelliVISION</title>
+    
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
+    <!-- ************************************** -->
+    <!-- ************************************** -->
+    <!-- ************************************** -->
+    <!--            css online includes         -->
+    <!-- ************************************** -->
+    <!-- ************************************** -->
+    <!-- ************************************** -->
+    
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://bootswatch.com/3/superhero/bootstrap.min.css"> 
+    
+    <!-- ************************************** -->
+    <!-- ************************************** -->
+    <!-- ************************************** -->
+    <!--            js online includes          -->
+    <!-- ************************************** -->
+    <!-- ************************************** -->
+    <!-- ************************************** -->
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+    <!-- Latest compiled Bootstrap JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    
+    <!-- d3 v4 JavaScript visualization library -->
+    <script src="http://d3js.org/d3.v4.min.js"></script>
+
+    
+    
+    
 	{% load staticfiles %}
-	<link rel="stylesheet" href="{% static 'personal/css/bootstrap.min.css' %}" type = "text/css"/>
-	<meta name="viewport" content = "width=device-width, initial-scale=1.0">
-	
-	<style type="text/css">
-		html,
-		body {
-		  height:100%
-		}
-	</style>
+    <!-- ************************************** -->
+    <!-- ************************************** -->
+    <!-- ************************************** -->
+    <!--            css local includes          -->
+    <!-- ************************************** -->
+    <!-- ************************************** -->
+    <!-- ************************************** -->
+    <!--    Load c3js charting library styles   -->
+    <link rel="stylesheet" href="{% static 'personal/css/c3.css' %}">
+    <!--         Load custom -AIM styles        -->
+    <link rel="stylesheet" href="{% static 'personal/css/styles.css' %}">
+    
+    <!-- ************************************** -->
+    <!-- ************************************** -->
+    <!-- ************************************** -->
+    <!--            js local includes           -->
+    <!-- ************************************** -->
+    <!-- ************************************** -->
+    <!-- ************************************** -->
+    <!--    jasondavies d3 word cloud library   -->
+	<script src="{% static 'personal/js/d3.layout.cloud.js' %}"></script>
+    <!--  Load c3js charting library JavaScript -->
+    <script src="{% static 'personal/js/c3.min.js' %}"></script>
+
+
+    <style>
+    .navbar.nav.navbar-toggle a:hover {
+        background-color: aqua;
+    }
+    .nav{
+        border-bottom: 1px lighter grey;
+    }
+
+   
+    </style>
+    
 </head>
 
-<body class="body" style="background-color:#f6f6f6">
-	<div class="container-fluid" style="min-height:95%; ">
-		<div class="row">
-			  <div class="col-sm-2">
-				  <br>
-				  <center>
-					<img src="{% static 'personal/img/logo.png' %}" class="img-responsive" style='max-height:65px;' alt="Logo">
-				  </center>
-			  </div>
-			  <div class="col-sm-10">
-				  <br>
-				  <center>
-				  <h3>Approval Rating</h3>
-				  </center>
-			  </div>
-		</div><hr>
+<body class="bodystyle" style="color:#5E5E5E">
+    <!--
+    <nav class="container navbar navbar-expand-lg navbar-light" style="background-color: white;">
+      <a class="navbar-brand" href="#">
+      <img src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+       Approval Rating
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+            
+          <a class="nav-item nav-link active" href='/'>Home<span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href='/personal/sentiment/'>Sentiment</a>
+          <a class="nav-item nav-link" href='/personal/electoral/'>Electoral</a>
+          <a class="nav-item nav-link" href='/contact/'>Contact</a>
 
-		<div class="row">
-		  <div class="col-sm-2">
-		  <br>
+        </div>
+      </div>
+    </nav>
+    -->
+    
+    <nav class="navbar navbar-inverse navbar-fixed-top" style="background-color:black;" >
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">
+              {% load staticfiles %}
+             <img style="padding-bottom:5px;" src="{% static 'personal/img/logo.png' %}" alt="logo" width="25*6.03125" height="25">   
+            
+            </a>
+        </div>
 
-		  <br>
-		   <!-- Great, til you resize. -->
-			<!--<div class="well bs-sidebar affix" id="sidebar" style="background-color:#fff">-->
-			<div class="well bs-sidebar" id="sidebar" style="background-color:#fff">
-			  <ul class="nav nav-pills nav-stacked">
-				<li><a href='/'>Home</a></li>
-				<li><a href='/personal/sentiment/'>Sentiment</a></li>
-				<li><a href='/personal/electoral/'>Electoral</a></li>
-				<li><a href='/contact/'>Contact</a></li>
-			  </ul>
-			</div> <!--well bs-sidebar affix-->
-		  </div> <!--col-sm-2-->
-		  <div class="col-sm-10">
-		  
-			<div class='container-fluid'>
-			<br><br>
-			   {% block content %}
-			   {% endblock %}	
-			</div>
-		  </div>
-		</div> 
-	</div>
-	<footer>
-		<div class="container-fluid" style='margin-left:15px'>
-			<p><a href="#" target="blank">Contact</a> | <a href="#" target="blank">LinkedIn</a> | <a href="#" target="blank">Twitter</a> | <a href="#" target="blank">Google+</a></p>
-		</div>
-	</footer>	
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li class="active"><a  href="/">Home <span class="sr-only">(current)</span></a></li>
+            <li><a  href='/personal/sentiment/'>Sentiment</a></li>
+            <li><a  href='/personal/electoral/'>Electoral</a></li>
+            <li><a  href='/contact/'>Contact</a></li>
+            <li class="dropdown">
+              <a  href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Candidate <span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="#">Imran Khan</a></li>
+                <li><a href="#">Nawaz Sharif</a></li>
+
+                <!--<li class="divider"></li>
+                <li><a href="#">One more separated link</a></li>-->
+              </ul>
+            </li>
+          </ul>
+
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">
+                <img  src="https://git-scm.com/images/logos/downloads/Git-Logo-White.eps" alt="git" width="21*2.3947" height="21">
+                
+                </a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+
+
+    <div>
+       {% block content %}
+       {% endblock %}	
+    </div>
 	
+	
+	
+
+
+    <script src="{% static 'personal/js/raw_tweets.js' %}"></script>
+
+    <script src="{% static 'personal/js/sentiment_summary_donut.js' %}"></script>
+
+    <script src="{% static 'personal/js/sentiment_summary_guage.js' %}"></script>
+
+    <script src="{% static 'personal/js/sentiment_summary_barchart.js' %}"></script>
+
+    <script src="{% static 'personal/js/sentiment_summary_wordcloud.js' %}"></script>
+
+    <script src="{% static 'personal/js/entity_significance_wordcloud.js' %}"></script>
+
+    <script src="{% static 'personal/js/entity_significance_barchart.js' %}"></script>
+
+
+    
 </body>
 
 </html>
