--- a/mysite/personal/templates/personal/includes/htmlsnippet.html
+++ b/mysite/personal/templates/personal/includes/htmlsnippet.html
@@ -1,3 +1,5 @@
 {% block content %}
-<p>Look @ me, I am included!!!</p>
+<div class='container'>
+    <p>Look @ me, I am included!!!</p>
+</div>
 {% endblock %}
