--- a/mysite/personal/templates/personal/header.html
+++ b/mysite/personal/templates/personal/header.html
@@ -135,7 +135,7 @@
           </ul>
 
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">
+            <li><a href="https://github.com/AIM-FYP/FYP_Django_WebApp">
                 <img  src="https://git-scm.com/images/logos/downloads/Git-Logo-White.eps" alt="git" width="21*2.3947" height="21">
                 
                 </a></li>
@@ -159,7 +159,7 @@
 
     <script src="{% static 'personal/js/sentiment_summary_donut.js' %}"></script>
 
-    <script src="{% static 'personal/js/sentiment_summary_guage.js' %}"></script>
+    <!--  More significance in next versions <script src="{% static 'personal/js/sentiment_summary_guage.js' %}"></script>-->
 
     <script src="{% static 'personal/js/sentiment_summary_barchart.js' %}"></script>
 
