--- a/mysite/personal/templates/personal/home.html
+++ b/mysite/personal/templates/personal/home.html
@@ -164,7 +164,6 @@
 
 
 
-    
     <div class="container">
       <div class="row">
             <div class="col-lg-4"> 
@@ -185,155 +184,78 @@
            </div>
     </div>
     
-    
+
     <div class="container">
         <div class="row">
-            <div class="col-lg-4" style="margin-top: 25px"> 
-
-                <div class="container">
-                  <div class="row">
-                        <div class="col-lg-4"> 
-                            <div class="divTable blueTable">
-                                <div class="divTableBody">
-                                <!-- *****  Guage here ***** --> 
-                                    <div id="demo" class="divTableRow">
-
-                                        <div class="divTableCell">
-                                            <div id="guage">
-                                            </div>
-                                        </div>
-                                    </div>   
-                                </div>     
-                            </div>
-                      </div>
-
-
-
-
-                       </div>
-                </div>
-                <div class="container">
-                  <div class="row">
-
-                      <div class="col-lg-4"> 
-                            <div class="divTable blueTable">
-                                <div class="divTableBody">
-                                <!-- *****  Donut here ***** --> 
-                                    <div id="demo" class="divTableRow">
-
-                                        <div class="divTableCell">
-                                            <div id="donut">
-                                            </div>
-                                        </div>
-                                    </div>   
-                                </div>     
-                            </div>
-                      </div>
- 
-                    </div>
-                </div>
-    
-                
-            </div>
-         
             <div class="col-lg-4"> 
+                 
+               
+                <div class="divTable blueTable">
+                    <div class="divTableBody">
+                    
+                        <div id="demo" class="divTableRow">
+
+                            <div class="divTableCell">
+                                <div id="donut">
+                                    <!-- *****  Donut here ***** --> 
+                                </div>
+
+                            </div>
+                        </div>   
+                    </div>     
+                </div>
                 
                 
-                            <div class="container">
-                  <div class="row">
-                        <div class="col-lg-4"> 
-                            <div class="divTable blueTable">
-                                <div class="divTableBody">
-                                <!-- *****  Guage here ***** --> 
-                                    <div id="demo" class="divTableRow">
-
-                                        <div class="divTableCell">
-                                            
-                                <br>
-                                <h8>
-                                
-                                    Figures are shown based on tweets extracted for selected politician.
-                                    <br><br>
-                                    Average sentiments and contributing sentiments is visualized.
-                                    <br><br>
-                                    Area Chart and Scatter Plot is drawn to visualize sentiment points for each sentiment class.
-                                    
-                                    
-                                </h8>
-                                <br>
-                               
-                                <br>    
-                                        </div>
-                                    </div>   
-                                </div>     
-                            </div>
-                      </div>
-
-
-
-
-                       </div>
-                </div>
-                <div class="container">
-                  <div class="row">
-
-                      <div class="col-lg-4"> 
-                            <div class="divTable blueTable">
-                                <div class="divTableBody">
-                                <!-- *****  Donut here ***** --> 
-                                    <div id="demo" class="divTableRow">
-
-                                        <div class="divTableCell">
-                                            <div id="wordcloud1">
-                                                <!-- Generic Word Cloud Here -->
-                                            </div>
-                                            
-                                        </div>
-                                    </div>   
-                                </div>     
-                            </div>
-                      </div>
-                      
-                     
-                      
-                      
-                      
-                      
-                    </div>
-                </div>
-       
-   
-            
+              
             </div>
             
-            <div class="col-lg-4" style="margin-top: 110px">
-                
-                
-                
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-4"> 
-                            <div class="divTable blueTable">
-                                <div class="divTableBody">
-                                <!-- *****  Guage here ***** --> 
-                                    <div id="demo" class="divTableRow">
+            <div class="col-lg-4"> 
+                 
+            
+              <div class="divTable blueTable">
+                    <div class="divTableBody">
+                    
+                        <div id="demo" class="divTableRow">
 
-                                        <div class="divTableCell">
-                                            <div id="chart1">
-                                            </div>
-                                        </div>
-                                    </div>   
-                                </div>     
+                            <div class="divTableCell">
+                                 <div id="wordcloud1"></div>
+
                             </div>
-                      </div>
-                    </div>
-                </div>
+                        </div>   
+                    </div>     
+                </div>   
             </div>
+            
+            
+            <div class="col-lg-4"> 
+                 
+           
+              <div class="divTable blueTable">
+                    <div class="divTableBody">
+                    
+                        <div id="demo" class="divTableRow">
+
+                            <div class="divTableCell">
+                                 <div id="chart1"></div>
+
+                            </div>
+                        </div>   
+                    </div>     
+                </div>
+               
+                
+                
+                
+            </div>
+            
+            
             
         </div>
-    
-    
-    </div>    
+    </div>
+
+
+
+
 
 
 <!-- small snippet includes -->
