--- a/mysite/personal/templates/personal/home.html
+++ b/mysite/personal/templates/personal/home.html
@@ -14,7 +14,7 @@
 
 <br><br>    
       
-<div class="container">
+<div id="scrollRawTweets" class="container">
   <div class="row">
         <div class="col-lg-4"> 
              <div class="divTable blueTable">
@@ -55,21 +55,20 @@
       
     <div id="middiv" class="col-lg-4">
       
-                        <div class="divTable blueTable">
+            <div class="divTable blueTable">
 
-                        <div class="divTableHeading">
-                            <div class="divTableRow">
-                                <div class="divTableHead">Top Negative Tweets</div>
-                            </div>
-                        </div>   
+                    <div class="divTableHeading">
+                        <div class="divTableRow">
+                            <div class="divTableHead">Top Negative Tweets</div>
+                        </div>
+                    </div>   
 
-                        <div class="divTableBody">
-                        <!-- *****  Tweets here ***** -->     
-                        </div>     
-    </div>
+                    <div class="divTableBody">
+                    <!-- *****  Tweets here ***** -->     
+                    </div>     
+            </div>
         
-      
-      </div>
+         </div>
       <div id="rightdiv" class="col-lg-4">
 
                           <div class="divTable blueTable">
@@ -83,7 +82,19 @@
                         <div class="divTableBody">
                         <!-- *****  Tweets here ***** -->     
                         </div>     
-                    </div>         
+                    </div> 
+          
+          
+          
+             <div class="custompagination" style="background-color:white;display: inline-block;float:right;margin-right:15px ">
+                 <a style="float: left;" href="#">&laquo;</a>
+                 <a class="active" style="float: left;" href="#">1</a>
+                 <a style="float: left;align-content: center;" href="#">2</a>
+                 <a style="float: left;align-content: center;" href="#">3</a>
+                 <a style="float: left;align-content: center;" href="#">&raquo;</a>
+             </div>
+          
+          
       </div>
     
   </div>
@@ -91,7 +102,7 @@
 </div>
     
      
-    <div class="container">
+    <div id="scrollEntitySignificance" class="container">
       <div class="row">
             <div class="col-lg-4"> 
                  <div class="divTable blueTable">
@@ -164,7 +175,7 @@
 
 
 
-    <div class="container">
+    <div id="scrollSentimentSummary" class="container">
       <div class="row">
             <div class="col-lg-4"> 
                  <div class="divTable blueTable">
@@ -255,7 +266,7 @@
 
 
 
-
+<div id="down"></div>
 
 
 <!-- small snippet includes -->
