--- a/mysite/personal/static/personal/css/styles.css
+++ b/mysite/personal/static/personal/css/styles.css
@@ -17,6 +17,44 @@
   margin-left: 90%;
 }
 
+
+/* pagination that goes with our custom bootstrap theme */
+.custompagination {
+    display: inline-block;
+
+   
+  
+    text-decoration: none;
+    transition: background-color .3s;
+
+    font-family:monospace;
+    font-size: 12px;
+    -webkit-box-shadow: 0px 0px 3px 1px rgba(0,0,0,0.19); 
+box-shadow: 0px 0px 3px 1px rgba(0,0,0,0.19);
+}
+.custompagination a {
+
+    
+    padding: 8px 16px;
+    text-decoration: none;
+    transition: background-color .3s;
+    
+    color:dimgrey;
+    font-family:monospace;
+    font-size: 12px;
+}
+
+.custompagination a.active {
+    background-color: #df691a;
+    color: white;
+    
+}
+.custompagination a:hover:not(.active) {background-color: #df691a;color: white;
+}
+
+
+
+
 /* To fill body with bgcolor and eliminate horizontalscrolling */
 .bodystyle{
     background-color: #fcfbf8;
