--- a/mysite/personal/templates/personal/header.html
+++ b/mysite/personal/templates/personal/header.html
@@ -176,7 +176,7 @@
 
           <ul class="nav navbar-nav navbar-right">
             <li><a href="https://github.com/AIM-FYP/FYP_Django_WebApp">
-                <img  src="https://git-scm.com/images/logos/downloads/Git-Logo-White.eps" alt="git" width="21*2.3947" height="21">
+                <img  src="{% static 'personal/img/Git-Logo-White.png' %}" alt="git" width="21*2.3947" height="21">
                 
                 </a></li>
           </ul>
