--- a/mysite/personal/templates/personal/header.html
+++ b/mysite/personal/templates/personal/header.html
@@ -143,7 +143,7 @@
           </button>
           <a class="navbar-brand" href="/">
               {% load staticfiles %}
-             <img style="padding-bottom:5px;" src="{% static 'personal/img/logo.png' %}" alt="logo" width="25*6.03125" height="25">   
+             <img style="padding-bottom:5px;" src="{% static 'personal/img/logo.png' %}" alt="logo" width="25*6.9930069" height="25">   
             
             </a>
         </div>
