--- a/mysite/personal/templates/personal/landing.html
+++ b/mysite/personal/templates/personal/landing.html
@@ -82,8 +82,8 @@
         <div class="container">
             <h1 style="color:white;margin-left:30px; "> 
                 {% load staticfiles %}
-             <img style="padding-bottom:5px;" src="{% static 'personal/img/logo.png' %}" alt="logo" width="45*6.03125" height="45"> 
-                <br>
+             <img src="{% static 'personal/img/logo.png' %}" alt="logo" width="75*6.9930069" height="75"> 
+                
  
             </h1>
               <p style="color:lightgrey;margin-left:30px; ">Analyze Approval Rating of political candidates from tweets sentiments. Multiple visualizations to identity trends and events. </p>
@@ -96,7 +96,7 @@
     <div class="container">
         <br>
         <br>
-        <h2 style="margin-left:30px;">
+        <h2 style="margin-left:30px;color:black;">
         Why someone has to do it?
         </h2>
         <h5 style="margin-left:30px;"><br>
