feat(event_chart.js): "event chart integrated with dummy data along with python scrapper"

--- a/mysite/personal/templates/personal/header.html
+++ b/mysite/personal/templates/personal/header.html
@@ -35,6 +35,7 @@
     
     <!-- d3 v4 JavaScript visualization library -->
     <script src="{% static 'personal/js/d3.v4.min.js' %}"></script>
+    <script src="{% static 'personal/js/d3-tip.js' %}"></script>
  
 
     <!-- ************************************** -->
@@ -222,6 +223,8 @@
     <script src="{% static 'personal/js/entity_significance_wordcloud.js' %}"></script>
 
     <script src="{% static 'personal/js/entity_significance_barchart.js' %}"></script>
+    
+    <script src="{% static 'personal/js/event_chart.js' %}"></script>
 
 
     
