--- a/mysite/personal/static/personal/css/styles.css
+++ b/mysite/personal/static/personal/css/styles.css
@@ -121,3 +121,58 @@ div.blueTable {
 .divTableCell, .divTableHead { display: block;}
 .divTableHeading { display: table-header-group;}
 .divTableFoot { display: table-footer-group;}
+
+.axis path,
+.legend {
+            padding: 5px;
+            font: 10px sans-serif;
+            background: yellow;
+            box-shadow: 2px 2px 1px #888;
+        }
+.line {
+        fill: none;
+        stroke: steelblue;
+        stroke-width: 1.5px;
+    }
+
+.circle{
+    pointer-events: all;
+}
+.mouseover{
+  fill: none;
+  pointer-events: all;
+}
+.zoom {
+  cursor: move;
+  fill: none;
+  pointer-events: all;
+}
+.d3-tip {
+  line-height: 1;
+  font-weight: bold;
+  /*padding: 12px;*/
+  background: rgba(0,0,0,0.8);
+  color: #df691a;
+  /*border-radius: 2px;*/
+}
+
+/* Creates a small triangle extender for the tooltip */
+.d3-tip:after {
+  box-sizing: border-box;
+  display: inline;
+  font-size: 10px;
+  width: 100%;
+  line-height: 1;
+  color: rgba(192,192,192,1);
+  content: "\25BC";
+  position: absolute;
+  text-align: center;
+}
+
+/* Style northward tooltips differently */
+.d3-tip.n:after {
+  margin: -1px 0 0 0;
+  top: 100%;
+  left: 0;
+}
+
