--- a/mysite/personal/templates/personal/home.html
+++ b/mysite/personal/templates/personal/home.html
@@ -270,6 +270,56 @@
 
      <br><br><br><br><br><br><br><br>
 
+  <div class="container">
+      <div class="row">
+            <div class="col-lg-4"> 
+                 <div class="divTable blueTable">
+                 <div class="divTableHeading">
+                    <div class="divTableRow">
+                        <div class="divTableHead">
+
+                            <div class="mainHeading">
+                                Events of Interest
+                            </div>
+
+                        </div>
+                    </div>
+                 </div> 
+                </div>
+              </div>
+           </div>
+    </div>
+
+    
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12"> 
+                 
+                <!-- Word Cloud Here -->
+                <div class="divTable blueTable">
+                    <div class="divTableBody">
+                    
+                        <div id="demo" class="divTableRow">
+
+                            <div class="divTableCell">
+                                <div >
+                                    <!-- Event chart Here -->
+                                    <svg id="events" width="960" height="500"></svg>
+                                </div>
+
+                            </div>
+                        </div>   
+                    </div>     
+                </div>
+                
+                
+              
+            </div>
+            
+            
+        </div>
+    </div>
+
 
 
 
